# disorder

./: .gitignore  .travis.yml  README.md  cabal.project
.github/workflows/: haskell.yml
disorder-aeson/: ambiata-disorder-aeson.cabal
disorder-cli/: ambiata-disorder-cli.cabal
disorder-core/: ambiata-disorder-core.cabal
disorder-core/src/Disorder/Core/: Gen.hs  IO.hs
disorder-core/test/Test/Disorder/Core/: IO.hs
disorder-corpus/: ambiata-disorder-corpus.cabal
disorder-eithert/: ambiata-disorder-eithert.cabal
disorder-jack/: ambiata-disorder-jack.cabal
disorder-jack/src/Disorder/Jack/: Property.hs
disorder-jack/test/Test/Disorder/Jack/: Core.hs
disorder-lens/: ambiata-disorder-lens.cabal
