name:                  ambiata-disorder-aeson
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              disorder-aeson
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           disorder-aeson.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                       base                            >= 3          && < 6
                     , aeson                           >= 0.8        && < 2.3
                     , ambiata-disorder-core
                     , QuickCheck
                     , time

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Disorder.Aeson
                       Disorder.Aeson.Time

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 6
                     , ambiata-disorder-aeson
                     , aeson
                     , QuickCheck
                     , time

  other-modules:
                       Test.Disorder.Aeson
                       Test.Disorder.Aeson.Time
