name:                  ambiata-disorder-corpus
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              disorder-corpus
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           disorder-corpus.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.7

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Disorder.Corpus

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-corpus
                     , text
                     , QuickCheck
